<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_note"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_note"
        android:shortcutShortLabel="@string/shortcut_note_short_label"
        android:shortcutLongLabel="@string/shortcut_new_note">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="productivityx://notes/new" />
    </shortcut>
    <shortcut
        android:shortcutId="new_task"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_task"
        android:shortcutShortLabel="@string/shortcut_task_short_label"
        android:shortcutLongLabel="@string/shortcut_new_task">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="productivityx://tasks/new" />
    </shortcut>
    <shortcut
        android:shortcutId="start_focus"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_focus"
        android:shortcutShortLabel="@string/shortcut_focus_short_label"
        android:shortcutLongLabel="@string/shortcut_start_focus">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="productivityx://pomodoro/start" />
    </shortcut>
    <shortcut
        android:shortcutId="ai_chat"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_ai"
        android:shortcutShortLabel="@string/shortcut_ai_short_label"
        android:shortcutLongLabel="@string/shortcut_ai_chat">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="productivityx://ai/chat" />
    </shortcut>
</shortcuts>
